--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_ql=true
 jwt.secret: h2HFkfef56dDd4DCC458dc4cCFEDfce85v7d5
 
+spring.servlet.multipart.max-file-size=40MB
+spring.servlet.multipart.max-request-size=40MB
