--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/toroo_db
+spring.datasource.url=jdbc:mysql://localhost:3306/toro_db
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_ql=true
-jwt.secret: h2HFkfef56dDd4DCC458dc4cCFEDfce85v7d5
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
 
 spring.servlet.multipart.max-file-size=40MB
 spring.servlet.multipart.max-request-size=40MB
+
+spring.jpa.properties.hibernate.format_sql=true 
+
+
+
+jwt.secret: h2HFkfef56dDd4DCC458dc4cCFEDfce85v7d5
